WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266325
REGRESSION (
271770@main
): GPUP crashes under RemoteImageBufferSet::dynamicContentScalingDisplayList
https://bugs.webkit.org/show_bug.cgi?id=266325
Summary
REGRESSION (271770@main): GPUP crashes under RemoteImageBufferSet::dynamicCon...
Tim Horton
Reported
2023-12-12 21:11:42 PST
REGRESSION (
271770@main
): GPUP crashes under RemoteImageBufferSet::dynamicContentScalingDisplayList
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2023-12-12 21:11:48 PST
<
rdar://problem/119585420
>
Tim Horton
Comment 2
2023-12-12 21:12:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21720
EWS
Comment 3
2023-12-12 23:26:58 PST
Committed
271971@main
(d384013f6817): <
https://commits.webkit.org/271971@main
> Reviewed commits have been landed. Closing PR #21720 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug