Cherry-pick d384013f6817. rdar://119585420

REGRESSION (271770@main): GPUP crashes under RemoteImageBufferSet::dynamicContentScalingDisplayList
    https://bugs.webkit.org/show_bug.cgi?id=266325
    rdar://119585420

    Reviewed by Dean Jackson.

    * Source/WebKit/GPUProcess/graphics/RemoteImageBufferSet.cpp:
    (WebKit::RemoteImageBufferSet::dynamicContentScalingDisplayList):
    Null-check m_frontBuffer.

    Canonical link: https://commits.webkit.org/271971@main

Identifier: 271831.11@safari-7618.1.9-branch